@@ -1,3 +1,7 @@
+2012-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* tumblr/api.py, tumblr/account.py: Added support for 'posts' API.
+
 2012-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* utils/truncatehtml.py: Added HTML truncation for Tumblr.
